@@ -15,6 +15,8 @@
 
 04/30/23    03:32PM     title screen
 
+05/01/23    02:37PM     first click will now never be a bomb
+
 
 refine flagging
 win conditions
